# churnguard-ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pipeline.sh
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/.github/: pull_request_template.md
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_phases_1_6.py
backend/app/: generate_dataset.py  main.py
backend/app/core/: cache.py  config.py  database.py  drift.py  error_handlers.py  exceptions.py  logging.py  metrics.py  middleware.py  security.py
backend/app/dependencies/: auth.py  db.py
backend/app/ml/: experiment_tracker.py  explainer.py  pipeline.py  train.py
backend/app/models/: ab_test.py  audit_log.py  drift_report.py  experiment.py  model_version.py  prediction_job.py  user.py
backend/app/repositories/: ab_test_repository.py  audit_log_repository.py  drift_repository.py  experiment_repository.py  model_version_repository.py  prediction_job_repository.py  user_repository.py
backend/app/schemas/: auth.py  batch.py  common.py  drift.py  experiment.py  model_version.py  predict.py
backend/app/services/: ab_test_service.py  audit_service.py  auth_service.py  batch_service.py  drift_service.py  experiment_service.py  explain_service.py  model_service.py  predict_service.py
backend/app/tasks/: batch_predict.py  drift_check.py  (+2 more)
backend/data/: train.csv
backend/runbooks/: on-call.md
backend/tests/: conftest.py
(+42 files in other folders)
