[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "churnguard-ai"
version = "1.0.0"
description = "Customer Churn Prediction SaaS Platform"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20", "RUF"]
ignore = ["S101", "B008", "A003"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S", "T20", "N"]
"app/ml/train.py" = ["T20"]
"alembic/*" = ["N"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80 -v"

[tool.coverage.run]
source = ["app"]
omit = ["app/ml/train.py", "alembic/*"]
